--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/samturrell/vue-breadcrumbs.git"
+  },
   "author": "Sam Turrell <sam@samturrell.co.uk> (http://samturrell.co.uk)",
   "license": "ISC",
   "devDependencies": {
