--- a/package.json
+++ b/package.json
@@ -11,14 +11,5 @@
     "url": "git+https://github.com/samturrell/vue-breadcrumbs.git"
   },
   "author": "Sam Turrell <sam@samturrell.co.uk> (http://samturrell.co.uk)",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.7.6",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-runtime": "^6.6.1",
-    "browserify": "^13.0.0",
-    "vue-hot-reload-api": "^1.3.2",
-    "vueify": "^8.3.9"
-  }
+  "license": "ISC"
 }
