Added actual readme and example

--- a/package.json
+++ b/package.json
@@ -2,14 +2,68 @@
   "name": "vue-breadcrumbs",
   "version": "0.2.2",
   "description": "Breadcrumbs for vue.js",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "author": {
+    "name": "Sam Turrell",
+    "email": "sam@samturrell.co.uk",
+    "url": "http://samturrell.co.uk"
   },
+  "bugs": {
+    "url": "https://github.com/samturrell/vue-breadcrumbs/issues"
+  },
+  "devDependencies": {
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-espower": "^2.0.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-es2015-rollup": "^1.0.0",
+    "eslint": "^2.8.0",
+    "eslint-config-vue": "^1.0.0",
+    "eslint-loader": "^1.3.0",
+    "istanbul-instrumenter-loader": "^0.1.3",
+    "json-loader": "^0.5.4",
+    "karma": "^0.13.9",
+    "karma-coverage": "^0.5.2",
+    "karma-mocha": "^0.2.0",
+    "karma-mocha-reporter": "^1.1.1",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.3.4",
+    "mocha-loader": "^0.7.1",
+    "phantomjs": "^1.9.18",
+    "power-assert": "^1.2.0",
+    "rollup": "^0.21.1",
+    "rollup-plugin-babel": "^2.2.0",
+    "rollup-plugin-replace": "^1.1.0",
+    "uglify-js": "^2.6.1",
+    "vue": "^1.0.10",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
+  },
+  "files": [
+    "dist/vue-breadcrumbs.js",
+    "dist/vue-breadcrumbs.min.js",
+    "dist/vue-breadcrumbs.common.js",
+    "src"
+  ],
+  "homepage": "https://github.com/samturrell/vue-breadcrumbs#readme",
+  "jsnext:main": "src/index.js",
+  "keywords": [
+    "breadcrumbs",
+    "plugin",
+    "vue",
+    "vuejs"
+  ],
+  "license": "MIT",
+  "main": "dist/vue-breadcrumbs.common.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/samturrell/vue-breadcrumbs.git"
   },
-  "author": "Sam Turrell <sam@samturrell.co.uk> (http://samturrell.co.uk)",
-  "license": "ISC"
+  "scripts": {
+    "build": "node config/build.js",
+    "clean": "rm -rf coverage && rm -rf dist",
+    "dev": "webpack-dev-server --quiet --config config/webpack.dev.conf.js --host 0.0.0.0",
+    "lint": "eslint src test config"
+  }
 }
