--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-plugin-espower": "^2.0.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-es2015-rollup": "^1.0.0",
-    "changelog": "^1.0.7",
+    "changelog": "github:dylang/changelog",
     "eslint": "^2.8.0",
     "eslint-config-vue": "^1.0.0",
     "eslint-loader": "^1.3.0",
